@@ -1,43 +1,13 @@
-package com.mailapp.config;
+CorsConfiguration config = new CorsConfiguration();
 
-import org.springframework.context.annotation.Bean;
-import org.springframework.context.annotation.Configuration;
-import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
+config.setAllowedOriginPatterns(List.of(
+        "http://localhost:5173",
+        "https://*.vercel.app"
+));
 
-import java.util.Arrays;
-import java.util.Collections;
+config.setAllowedMethods(List.of(
+        "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"
+));
 
-@Configuration
-public class CorsConfig {
-
-    @Bean
-    public CorsFilter corsFilter() {
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        CorsConfiguration config = new CorsConfiguration();
-
-        // 1. Allow specific origins (Vercel wildcards + localhost)
-        config.setAllowedOriginPatterns(Arrays.asList(
-            "http://localhost:5173",
-            "https://email-generation-system-*.vercel.app"
-        ));
-
-        // 2. Allow all standard headers
-        config.setAllowedHeaders(Arrays.asList(
-            "Origin", "Content-Type", "Accept", "Authorization", 
-            "X-Requested-With", "Access-Control-Request-Method", 
-            "Access-Control-Request-Headers"
-        ));
-
-        // 3. Allow all methods
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-
-        // 4. Critical for Preflight success
-        config.setAllowCredentials(true);
-        config.setMaxAge(3600L); // Cache preflight for 1 hour
-
-        source.registerCorsConfiguration("/**", config);
-        return new CorsFilter(source);
-    }
-}
+config.setAllowedHeaders(List.of("*"));
+config.setAllowCredentials(true);
